Add liveness check
